# robotics_4610_final

./: .gitignore  LICENSE  Makefile  README.md  TASKS.md  build.sh  clean.sh  common.hxx  init.sh  main_goaliebot.cc  pid.cpp  search.hh  start-sim.sh  tasklib.hxx  taskrt.cpp  toollib.bash
ball_finding/: Makefile  import.cc  robot.cc  search.cc  search.hh
ball_finding_old/: CMakeLists.txt  mkflold
brain/: .main_goaliebot.cc.swp  CMakeLists.txt  Makefile  README.md  TASKS.md  brain.cc  brain_old.cc  common.cpp  common.hxx  main_goaliebot.cc  main_kickerbot.cc  pid.hxx  robot.cc  robot.hh  search.cc  search.hh  tasklib.cpp  tasklib.hxx  taskrt.hxx
brain/old/: brain_last.cc
common/: tasklib.h
kickerbot/: CMakeLists.txt  Makefile  brain.cc  robot.hh  viz.cc
models/camera_sensor/: model.config  model.sdf
models/gripper_arm/: model.config  model.sdf
models/gripper_arm_left/: model.config  model.sdf
models/soccer_ball/: model.config  model.rsdf  model.sdf
models/soccer_wall/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/tankbot/: model.rsdf  model.sdf
models/tankbot_goalie/: Makefile  README.md  model.rsdf  model.sdf
mtask/: ScanTask.hh  SearchTask.hh  State.hh  Task.hh
old/: brain2.cc  viz.hh
other/: Rakefile  mazegen.rb  template.xml.erb
plugins/: Makefile
plugins/tank_control/: CMakeLists.txt  Makefile  tank_control.cc
ttask/: CMakeLists.txt  Makefile  README.md  brain.cc  common.cpp  common.hxx  gfx.c  gfx.h  nav.cpp  nav.hxx  robot.cc  robot.hh  tasklib.cpp  tasklib.hxx
worlds/: demo1.world  hw08.world  soccer-field.world
(+11 files in other folders)
